@@ -134,7 +134,7 @@ public abstract class FetchDBMethodGenerator extends DBMethodGenerator<ObjectFie
         select.addIf(shouldHaveOrderByToken, "\n$T.getOrderByToken($L, $L),\n", QUERY_HELPER.className, context.getTargetAlias(), orderByFieldsBlock);
 
         if (context.getReferenceObject() == null || field.hasNodeID()) {
-            select.add((processedSchema.isUnion(field)) ? generateForUnionField(field, context) : generateForScalarField(field, context));
+            select.add(generateForField(field, context));
         } else {
             select.add(generateSelectRow(context));
         }
@@ -238,7 +238,7 @@ public abstract class FetchDBMethodGenerator extends DBMethodGenerator<ObjectFie
             fieldSource = fieldContext.renderQuerySource(getLocalTable()).toString();
             innerRowCode = generateCorrelatedSubquery(field, fieldContext);
         } else {
-            innerRowCode = (processedSchema.isUnion(field.getTypeName())) ? generateForUnionField(field, context) : generateForScalarField(field, context);
+            innerRowCode = generateForField(field, context);
         }
         return Pair.of(innerRowCode, fieldSource);
     }
@@ -495,14 +495,18 @@ public abstract class FetchDBMethodGenerator extends DBMethodGenerator<ObjectFie
     /**
      * Generate a single argument in the row method call.
      */
-    protected CodeBlock generateForScalarField(GenerationField field, FetchContext context) {
-        return generateForScalarField(field, context, false);
+    protected CodeBlock generateForField(GenerationField field, FetchContext context) {
+        return generateForField(field, context, false);
     }
 
     /**
      * Generate a single argument in the row method call.
      */
-    protected CodeBlock generateForScalarField(GenerationField field, FetchContext context, boolean overrideEnum) {
+    protected CodeBlock generateForField(GenerationField field, FetchContext context, boolean overrideEnum) {
+        if (processedSchema.isUnion(field)) {
+            return generateForUnionField(field, context);
+        }
+
         if (processedSchema.isNodeIdField(field)) {
             return createNodeIdBlock(context.getReferenceObject(), context.getTargetAlias());
         }
@@ -581,7 +585,7 @@ public abstract class FetchDBMethodGenerator extends DBMethodGenerator<ObjectFie
                                             .stream()
                                             .filter(it -> it.implementsInterface(processedSchema.getInterface(context.getReferenceObjectField()).getName()))
                                             .map(it -> CodeBlock.of("$S", it.getDiscriminator()))
-                                            .collect(Collectors.toList()),
+                                            .toList(),
                                     ", "))
             );
         }
@@ -752,15 +756,11 @@ public abstract class FetchDBMethodGenerator extends DBMethodGenerator<ObjectFie
             var lastTable = fieldSequence.getLast().getTable();
             var unpacked = unpackElement(context, argumentInputFieldName, condition, lastTable);
 
-            if (!field.hasOverridingCondition() && !condition.isOverriddenByAncestors()) {
-                var tupleBlock = CodeBlock.builder();
-                if (processedSchema.isNodeIdField(field) || field.isID()) {
-                    tupleBlock.add(CodeBlock.of("$T.trueCondition()", DSL.className));
-                } else {
-                    tupleBlock.add((processedSchema.isUnion(field)) ? generateForUnionField(field, context) : generateForScalarField(field, context, condition.hasRecord()));
-                }
+            if (condition.isOverriddenByAncestors()) {
+                continue;
+            }
 
-                tupleFieldBlocks.add(tupleBlock.build());
+            if (!field.hasOverridingCondition()) {
                 if (processedSchema.isNodeIdField(field)) {
                     tupleVariableBlocks.add(unpacked);
                 } else if (field.isID()) {
@@ -768,11 +768,13 @@ public abstract class FetchDBMethodGenerator extends DBMethodGenerator<ObjectFie
                 } else {
                     tupleVariableBlocks.add(inline(unpacked));
                 }
+
+                tupleFieldBlocks.add(makeTupleBlock(field, context, condition.hasRecord(), fieldTypeIsCLOB(lastTable.getName(), field.getUpperCaseName())));
                 selectedConditions.add(condition);
             }
 
-            if (field.hasCondition() && !condition.isOverriddenByAncestors()) {
-                tupleFieldBlocks.add(CodeBlock.of("$T.trueCondition()", DSL.className));
+            if (field.hasCondition()) {
+                tupleFieldBlocks.add(trueCondition());
 
                 var conditionInputs = List.of(fieldSequence.render(), unpacked);
                 tupleVariableBlocks.add(field.getCondition().formatToString(conditionInputs));
@@ -811,6 +813,17 @@ public abstract class FetchDBMethodGenerator extends DBMethodGenerator<ObjectFie
                 .unindent()
                 .unindent()
                 .build();
+    }
+
+    private CodeBlock makeTupleBlock(GenerationField field, FetchContext context, boolean hasRecord, boolean isClob) {
+        if (field.isID() || processedSchema.isNodeIdField(field)) {
+            return trueCondition();
+        }
+
+        return CodeBlock.join(
+                generateForField(field, context, hasRecord),
+                CodeBlock.ofIf(isClob, ".cast($T.class)", STRING.className)
+        );
     }
 
     private CodeBlock unpackElement(FetchContext context, String argumentInputFieldName, InputCondition condition, JOOQMapping table) {
